--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,74 @@ span {
   box-shadow: 0 0 25px orangered;
   color: white;
 }
+
+.home {
+  width: 100%;
+  min-height: 100vh;
+  background: rgb(241, 241, 241);
+  display: flex;
+  align-items: center;
+  gap: 8em;
+  padding: 30px 12% 0;
+}
+
+.home-content {
+  max-width: 800px;
+}
+
+.home-content h3 {
+  font-size: 30px;
+}
+
+.home-content h1 {
+  font-size: 25px;
+  line-height: 1.2;
+  margin: 15px 0 20px;
+}
+ 
+.home-content p {
+  font-size: 20px;
+  margin: 25px 0 30px;
+}
+ 
+.btn-box {
+  width: 345px;
+  display: flex;
+}
+
+.btn-1 {
+  padding: 15px 25px;
+  background-color: orangered;
+  color: white;
+  border: 2px solid black;
+  border-radius: 8px;
+  font-size: 16px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  margin-top: 18px;
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+
+.btn-1:hover {
+  background-color: white;
+  color:orangered;
+}
+
+.img-box img {
+  border-radius: 35%;
+  width: 350px;
+}
+
+::-webit-scrollbar {
+  width: 15px;
+}
+
+::-webit-scrollbar-thumb {
+  background-color: orangered;
+}
+
+::-webit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 50px;
+}
