--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 35px 12%;
+  padding: 20px 10%;
   background: rgba(0, 0, 0, 0.8);
   backdrop-filter: blue(10px);
   display: flex;
@@ -78,8 +78,8 @@ span {
   background: rgb(241, 241, 241);
   display: flex;
   align-items: center;
-  gap: 8em;
-  padding: 30px 12% 0;
+  gap: 4em;
+  padding: 35px 10% 0;
 }
 
 .home-content {
@@ -127,7 +127,7 @@ span {
 
 .img-box img {
   border-radius: 35%;
-  width: 350px;
+  width: 320px;
 }
 
 ::-webit-scrollbar {
@@ -141,4 +141,37 @@ span {
 ::-webit-scrollbar-track {
   background-color: rgba(0, 0, 0, 0.6);
   width: 50px;
+}
+
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12% 8%;
+  gap: 10em;
+  background: black;
+}
+
+.about-img img {
+  position: relative;
+  width: 350px;
+  box-shadow: 0 0 20px orangered,
+              0 0 30px orangered;
+  border-radius: 35%;
+}
+.about-contact h2 {
+  text-align: left;
+  color: white;
+  font-size: 45px;
+}
+
+.about-contact h3 {
+ font-size: 35px;
+ color: white; 
+}
+
+.about-contact p {
+  color: white;
+  font-size: 20px;
+  margin: 2em 0 3em;
 }
