--- a/styles.css
+++ b/styles.css
@@ -175,3 +175,222 @@ span {
   font-size: 20px;
   margin: 2em 0 3em;
 }
+
+.pro {
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 15px;
+  font-size: 36px;
+  padding: 0 15px 15px 15px;
+}
+
+.projects {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 30px;
+  margin-top: 8px;
+  padding: 0 20px 20px 40px;
+}
+ 
+.project {
+  overflow: hidden;
+  transition: transfrom 0.3s ease;
+  flex: 1;
+  min-width: 300px;
+  max-width: 35%;
+  display: flex;
+  flex-direction: column;
+}
+
+.project img {
+  object-fit: cover;
+  border-radius: 8px;
+  margin: 20px; 
+}
+
+.project h3 {
+  padding: 18px;
+  font-size: 1.5em;
+  color: orangered;
+}
+
+.project p {
+  padding: 0  15px 15px 15px;
+  font-size: 1em;
+  color: black;
+}
+
+.buttons {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 0 15px 15px 15px;
+  display: flex;
+  gap: 8px;
+  width: 85%;
+  height: 60px;
+}
+
+.buttons .btn {
+  flex: 1;
+  font-size: 15px;
+  display: inline-block;
+  text-align: center;
+  padding: 10px 0px;
+  margin-right: 5px;
+  background-color: black;
+  border: 2px solid orangered;
+  color: white;
+  text-decoration: none;
+  border-radius: 8px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.buttons .btn:hover {
+  background-color: orangered;
+  box-shadow: 0 0 25px orangered;
+  color: white;
+  transform: translateY(-2px);
+}
+
+.Cer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 30px;
+  margin-top: 8px;
+  padding: 0 20px 20px 50px;
+  background-color: black;
+ }
+ 
+.pro {
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 15px;
+  font-size: 36px;
+  padding: 0 15px 15px 15px;
+}
+ 
+.Certificate {
+  overflow: hidden;
+  transition: transfrom 0.3s ease;
+  flex: 1;
+  min-width: 300px;
+  max-width: 35%;
+  display: flex;
+  flex-direction: column;
+}
+ 
+.Certificate img {
+  object-fit: cover;
+  border-radius: 8px;
+  margin: 20px; 
+  box-shadow: 0 0 15px orangered,
+              0 0 20px orangered;
+}
+
+.contact-form h2 {
+  text-align: center;
+  margin-top: 3em;
+  margin-bottom: 1em;
+  font-size: 36px;
+}
+
+.contact-form form {
+  max-width: 50em;
+  margin: 1em auto;
+  text-align: center;
+  margin-bottom: 3em;
+}
+
+.contact-form form 
+.input-box 
+{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.contact-form form .input-box input,
+.contact-form form textarea 
+{
+  width: 100%;
+  padding: 1.5em;
+  font-size: 18px;
+  color: black;
+  background: rgb(241, 241, 241,);
+  border-radius: .9rem;
+  margin: 1rem 0;
+  resize: none;
+}
+
+.box {
+  padding: 15px 28px;
+  background-color: black;
+  color: orangered;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  font-size: 18px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  margin: 35px;
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+
+.box:hover {
+  background-color: orangered;
+  box-shadow: 0 0 25px orangered;
+  color: white;
+}
+
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  padding: 12px;
+  background-color: black;
+}
+
+.footer .social {
+  text-align: center;
+  padding-bottom: 25px;
+  color: white;
+   
+}
+
+.fa-linkedin {
+  color: white;
+}
+
+.fa-facebook {
+  color: white;
+}
+  
+.fa-github {
+  color: white;
+} 
+
+.footer .social a {
+  font-size: 24px;
+  color: white;
+  border: 2px sold orangered;
+  width: 40px;
+  height: 40px;
+  line-height: 38px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 8px;
+  box-shadow: inset 0 0 10px orangered, 0 0 10px
+ orangered;
+  transition: 0.3s ease;
+}
+
+.social a:hover {
+  transform: scale(1.2)translater(-10px);
+  color: orangered;
+  border: 2px solid orangered;
+}
+
+ 
